--- a/jupyterlite-dist/index.html
+++ b/jupyterlite-dist/index.html
@@ -44,8 +44,7 @@ for _k, _v in list(globals().items()):
       id="embedded-jupyterlab-123"
       name="jupyterlab"
       src="site/"
-      width="100%"
-      height="600px"
+      style="width: 100%; height: calc(100vh - 200px)"
       sandbox="allow-scripts allow-same-origin"
     ></iframe>
   </body>
