Sticky toolbar WIP

--- a/jupyterlite-dist/index.html
+++ b/jupyterlite-dist/index.html
@@ -63,6 +63,7 @@
           | { kind: 'HostToIFrame', type: 'InitialPayloadResponse', envInitializer: string, initialCells: string[] }
           | { kind: 'IFrameToHost', type: 'NotebookReady' }
           | { kind: 'IFrameToHost', type: 'HeightUpdated', height: number }
+          | { kind: 'HostToIFrame', type: 'ScrollUpdated', scrollTop: number }
       */
 
       const envInitializer = `
@@ -109,8 +110,35 @@ px.line(df, x='x', y='y')
           console.log(`HOST PAGE: unknown message '${event.data.type}' received!`);
         }
       });
+
+      document.addEventListener('scroll', () => {
+        const iframe = document.querySelector('#embedded-jupyterlab-123');
+        if (!iframe) {
+          console.error('IFrame "#embedded-jupyterlab-123" not found!');
+          return
+        }
+        const y = iframe.getBoundingClientRect().y - 100;  // space for the (hypothetical) toolbar of the outer notebook
+        const scrollTop = -y;
+        iframe.contentWindow.postMessage({
+            kind: 'HostToIFrame',
+            type: 'ScrollUpdated',
+            scrollTop,
+          }, '*');
+      }, true);  // it's important that we set useCapture=true, since we want to capture all scroll events
     </script>
     <h2>Below is a JupyterLite site running in an IFrame</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat diam nec augue facilisis semper vitae ac quam. Cras a elit fringilla, blandit orci sed, rhoncus tortor. Nullam sed laoreet tortor. Maecenas urna nisi, congue vel leo commodo, varius convallis orci. Maecenas quis venenatis felis. Nunc turpis augue, pellentesque efficitur pulvinar vitae, venenatis non dui. Etiam cursus purus at odio ultricies efficitur. Cras pharetra mi nec justo vulputate, quis viverra mauris accumsan. Aenean mollis orci eros, in placerat augue malesuada semper. Integer euismod hendrerit cursus. Nunc posuere risus in tellus dapibus egestas. Mauris dapibus sagittis dolor, quis efficitur lectus interdum id. In cursus vehicula tempor. Curabitur ac porttitor libero. Curabitur id libero ac leo placerat sagittis eu sit amet diam. Phasellus faucibus massa ligula, id elementum diam bibendum quis.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat diam nec augue facilisis semper vitae ac quam. Cras a elit fringilla, blandit orci sed, rhoncus tortor. Nullam sed laoreet tortor. Maecenas urna nisi, congue vel leo commodo, varius convallis orci. Maecenas quis venenatis felis. Nunc turpis augue, pellentesque efficitur pulvinar vitae, venenatis non dui. Etiam cursus purus at odio ultricies efficitur. Cras pharetra mi nec justo vulputate, quis viverra mauris accumsan. Aenean mollis orci eros, in placerat augue malesuada semper. Integer euismod hendrerit cursus. Nunc posuere risus in tellus dapibus egestas. Mauris dapibus sagittis dolor, quis efficitur lectus interdum id. In cursus vehicula tempor. Curabitur ac porttitor libero. Curabitur id libero ac leo placerat sagittis eu sit amet diam. Phasellus faucibus massa ligula, id elementum diam bibendum quis.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat diam nec augue facilisis semper vitae ac quam. Cras a elit fringilla, blandit orci sed, rhoncus tortor. Nullam sed laoreet tortor. Maecenas urna nisi, congue vel leo commodo, varius convallis orci. Maecenas quis venenatis felis. Nunc turpis augue, pellentesque efficitur pulvinar vitae, venenatis non dui. Etiam cursus purus at odio ultricies efficitur. Cras pharetra mi nec justo vulputate, quis viverra mauris accumsan. Aenean mollis orci eros, in placerat augue malesuada semper. Integer euismod hendrerit cursus. Nunc posuere risus in tellus dapibus egestas. Mauris dapibus sagittis dolor, quis efficitur lectus interdum id. In cursus vehicula tempor. Curabitur ac porttitor libero. Curabitur id libero ac leo placerat sagittis eu sit amet diam. Phasellus faucibus massa ligula, id elementum diam bibendum quis.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat diam nec augue facilisis semper vitae ac quam. Cras a elit fringilla, blandit orci sed, rhoncus tortor. Nullam sed laoreet tortor. Maecenas urna nisi, congue vel leo commodo, varius convallis orci. Maecenas quis venenatis felis. Nunc turpis augue, pellentesque efficitur pulvinar vitae, venenatis non dui. Etiam cursus purus at odio ultricies efficitur. Cras pharetra mi nec justo vulputate, quis viverra mauris accumsan. Aenean mollis orci eros, in placerat augue malesuada semper. Integer euismod hendrerit cursus. Nunc posuere risus in tellus dapibus egestas. Mauris dapibus sagittis dolor, quis efficitur lectus interdum id. In cursus vehicula tempor. Curabitur ac porttitor libero. Curabitur id libero ac leo placerat sagittis eu sit amet diam. Phasellus faucibus massa ligula, id elementum diam bibendum quis.
+    </p>
     <div class="container" style="width: 100%; height: 221px;">
       <iframe
         id="embedded-jupyterlab-123"
@@ -130,6 +158,30 @@ px.line(df, x='x', y='y')
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat diam nec augue facilisis semper vitae ac quam. Cras a elit fringilla, blandit orci sed, rhoncus tortor. Nullam sed laoreet tortor. Maecenas urna nisi, congue vel leo commodo, varius convallis orci. Maecenas quis venenatis felis. Nunc turpis augue, pellentesque efficitur pulvinar vitae, venenatis non dui. Etiam cursus purus at odio ultricies efficitur. Cras pharetra mi nec justo vulputate, quis viverra mauris accumsan. Aenean mollis orci eros, in placerat augue malesuada semper. Integer euismod hendrerit cursus. Nunc posuere risus in tellus dapibus egestas. Mauris dapibus sagittis dolor, quis efficitur lectus interdum id. In cursus vehicula tempor. Curabitur ac porttitor libero. Curabitur id libero ac leo placerat sagittis eu sit amet diam. Phasellus faucibus massa ligula, id elementum diam bibendum quis.
     </p>
-    
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat diam nec augue facilisis semper vitae ac quam. Cras a elit fringilla, blandit orci sed, rhoncus tortor. Nullam sed laoreet tortor. Maecenas urna nisi, congue vel leo commodo, varius convallis orci. Maecenas quis venenatis felis. Nunc turpis augue, pellentesque efficitur pulvinar vitae, venenatis non dui. Etiam cursus purus at odio ultricies efficitur. Cras pharetra mi nec justo vulputate, quis viverra mauris accumsan. Aenean mollis orci eros, in placerat augue malesuada semper. Integer euismod hendrerit cursus. Nunc posuere risus in tellus dapibus egestas. Mauris dapibus sagittis dolor, quis efficitur lectus interdum id. In cursus vehicula tempor. Curabitur ac porttitor libero. Curabitur id libero ac leo placerat sagittis eu sit amet diam. Phasellus faucibus massa ligula, id elementum diam bibendum quis.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat diam nec augue facilisis semper vitae ac quam. Cras a elit fringilla, blandit orci sed, rhoncus tortor. Nullam sed laoreet tortor. Maecenas urna nisi, congue vel leo commodo, varius convallis orci. Maecenas quis venenatis felis. Nunc turpis augue, pellentesque efficitur pulvinar vitae, venenatis non dui. Etiam cursus purus at odio ultricies efficitur. Cras pharetra mi nec justo vulputate, quis viverra mauris accumsan. Aenean mollis orci eros, in placerat augue malesuada semper. Integer euismod hendrerit cursus. Nunc posuere risus in tellus dapibus egestas. Mauris dapibus sagittis dolor, quis efficitur lectus interdum id. In cursus vehicula tempor. Curabitur ac porttitor libero. Curabitur id libero ac leo placerat sagittis eu sit amet diam. Phasellus faucibus massa ligula, id elementum diam bibendum quis.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat diam nec augue facilisis semper vitae ac quam. Cras a elit fringilla, blandit orci sed, rhoncus tortor. Nullam sed laoreet tortor. Maecenas urna nisi, congue vel leo commodo, varius convallis orci. Maecenas quis venenatis felis. Nunc turpis augue, pellentesque efficitur pulvinar vitae, venenatis non dui. Etiam cursus purus at odio ultricies efficitur. Cras pharetra mi nec justo vulputate, quis viverra mauris accumsan. Aenean mollis orci eros, in placerat augue malesuada semper. Integer euismod hendrerit cursus. Nunc posuere risus in tellus dapibus egestas. Mauris dapibus sagittis dolor, quis efficitur lectus interdum id. In cursus vehicula tempor. Curabitur ac porttitor libero. Curabitur id libero ac leo placerat sagittis eu sit amet diam. Phasellus faucibus massa ligula, id elementum diam bibendum quis.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat diam nec augue facilisis semper vitae ac quam. Cras a elit fringilla, blandit orci sed, rhoncus tortor. Nullam sed laoreet tortor. Maecenas urna nisi, congue vel leo commodo, varius convallis orci. Maecenas quis venenatis felis. Nunc turpis augue, pellentesque efficitur pulvinar vitae, venenatis non dui. Etiam cursus purus at odio ultricies efficitur. Cras pharetra mi nec justo vulputate, quis viverra mauris accumsan. Aenean mollis orci eros, in placerat augue malesuada semper. Integer euismod hendrerit cursus. Nunc posuere risus in tellus dapibus egestas. Mauris dapibus sagittis dolor, quis efficitur lectus interdum id. In cursus vehicula tempor. Curabitur ac porttitor libero. Curabitur id libero ac leo placerat sagittis eu sit amet diam. Phasellus faucibus massa ligula, id elementum diam bibendum quis.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat diam nec augue facilisis semper vitae ac quam. Cras a elit fringilla, blandit orci sed, rhoncus tortor. Nullam sed laoreet tortor. Maecenas urna nisi, congue vel leo commodo, varius convallis orci. Maecenas quis venenatis felis. Nunc turpis augue, pellentesque efficitur pulvinar vitae, venenatis non dui. Etiam cursus purus at odio ultricies efficitur. Cras pharetra mi nec justo vulputate, quis viverra mauris accumsan. Aenean mollis orci eros, in placerat augue malesuada semper. Integer euismod hendrerit cursus. Nunc posuere risus in tellus dapibus egestas. Mauris dapibus sagittis dolor, quis efficitur lectus interdum id. In cursus vehicula tempor. Curabitur ac porttitor libero. Curabitur id libero ac leo placerat sagittis eu sit amet diam. Phasellus faucibus massa ligula, id elementum diam bibendum quis.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat diam nec augue facilisis semper vitae ac quam. Cras a elit fringilla, blandit orci sed, rhoncus tortor. Nullam sed laoreet tortor. Maecenas urna nisi, congue vel leo commodo, varius convallis orci. Maecenas quis venenatis felis. Nunc turpis augue, pellentesque efficitur pulvinar vitae, venenatis non dui. Etiam cursus purus at odio ultricies efficitur. Cras pharetra mi nec justo vulputate, quis viverra mauris accumsan. Aenean mollis orci eros, in placerat augue malesuada semper. Integer euismod hendrerit cursus. Nunc posuere risus in tellus dapibus egestas. Mauris dapibus sagittis dolor, quis efficitur lectus interdum id. In cursus vehicula tempor. Curabitur ac porttitor libero. Curabitur id libero ac leo placerat sagittis eu sit amet diam. Phasellus faucibus massa ligula, id elementum diam bibendum quis.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat diam nec augue facilisis semper vitae ac quam. Cras a elit fringilla, blandit orci sed, rhoncus tortor. Nullam sed laoreet tortor. Maecenas urna nisi, congue vel leo commodo, varius convallis orci. Maecenas quis venenatis felis. Nunc turpis augue, pellentesque efficitur pulvinar vitae, venenatis non dui. Etiam cursus purus at odio ultricies efficitur. Cras pharetra mi nec justo vulputate, quis viverra mauris accumsan. Aenean mollis orci eros, in placerat augue malesuada semper. Integer euismod hendrerit cursus. Nunc posuere risus in tellus dapibus egestas. Mauris dapibus sagittis dolor, quis efficitur lectus interdum id. In cursus vehicula tempor. Curabitur ac porttitor libero. Curabitur id libero ac leo placerat sagittis eu sit amet diam. Phasellus faucibus massa ligula, id elementum diam bibendum quis.
+    </p>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla volutpat diam nec augue facilisis semper vitae ac quam. Cras a elit fringilla, blandit orci sed, rhoncus tortor. Nullam sed laoreet tortor. Maecenas urna nisi, congue vel leo commodo, varius convallis orci. Maecenas quis venenatis felis. Nunc turpis augue, pellentesque efficitur pulvinar vitae, venenatis non dui. Etiam cursus purus at odio ultricies efficitur. Cras pharetra mi nec justo vulputate, quis viverra mauris accumsan. Aenean mollis orci eros, in placerat augue malesuada semper. Integer euismod hendrerit cursus. Nunc posuere risus in tellus dapibus egestas. Mauris dapibus sagittis dolor, quis efficitur lectus interdum id. In cursus vehicula tempor. Curabitur ac porttitor libero. Curabitur id libero ac leo placerat sagittis eu sit amet diam. Phasellus faucibus massa ligula, id elementum diam bibendum quis.
+    </p>
+
   </body>
 </html>
