Init progressbar wip

--- a/jupyterlite-dist/index.html
+++ b/jupyterlite-dist/index.html
@@ -32,6 +32,8 @@
       */
 
       const envInitializer = `
+import time
+time.sleep(10)
 injected_var = "Hello World!"
 `.trim();
       const printInheritedEnv = `
